# TestTaskSecunda

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  compose.develop.yaml  compose.yaml  config.py  pyproject.toml
migrations/: env.py
migrations/versions/: 847f9d525391_init_models.py
scripts/: seed_db.py
src/: config.py  db.py  domain.py  exc_registry.py  exceptions.py  main.py  models.py  utils.py
src/api/: __init__.py  depends.py
src/api/routers/: organizations_router.py
src/api/schemes/: __init__.py  get_organization.py
src/app/: entities.py
src/app/services/: organizations_service.py
src/infrastructure/: db.py  models.py
src/infrastructure/repos/: __init__.py  base.py  exceptions.py
src/infrastructure/repos/sqlalchemy_repos/: activity_repo.py  building_repo.py  mappers.py  organization_repo.py  sqlalchemy_repo.py
tests/: test_mappers.py  test_sqlalchemy_repo.py
