[tool.poetry]
name = "testtasksecunda"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.119.1"
uvicorn = "^0.38.0"
python-dotenv = "^1.1.1"
geoalchemy2 = "^0.18.0"
sqlalchemy = "^2.0.44"
alembic = "^1.17.0"
asyncpg = "^0.30.0"
pytest = "^8.4.2"
shapely = "^2.1.2"
pytest-asyncio = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"